Clear remaining Java 25 deprecation warnings.
- Replace new Integer/Long/Double/Float(...) with the .valueOf(...)
  factories (and Integer.toString(...) where the result was used as
  text) across JSON, server panels, and the SVG replaced-element
  factory.
- Replace Class#newInstance() with getDeclaredConstructor().newInstance()
  in the Kiosk, Player, PlayerRunner, and proxy clients; widen the
  catch in Kiosk.AvailableGame.getCanvas() and the throws in
  PlayerRunner.main() to ReflectiveOperationException to cover the
  additional checked exceptions.
- Replace new URL(String) with URI.create(String).toURL() in
  RemoteResourceLoader and MatchPublisher.
- Replace Runtime.exec(String) with the array overload in the proxy.
- Build now compiles with -Xlint:deprecation enabled to keep these
  regressions from sneaking back in.